--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,19 @@
-[tool.poetry]
-name = "haystack-practice"
+[project]
+name = "llm-rag-sample"
 version = "0.1.0"
-description = ""
-authors = ["ponytailer"]
+description = "llm rag samples"
+readme = "README.md"
+requires-python = ">=3.9"
+dependencies = [
+    "dspy-ai>=2.5.0",
+    "haystack-ai>=2.5.1",
+    "langgraph>=0.2.28",
+    "ollama-haystack>=1.0.1",
+    "ragas-haystack>=1.0.1",
+]
 
-[[tool.poetry.source]]
-name = "douban"
-url = "https://pypi.doubanio.com/simple"
+[tool.uv]
+dev-dependencies = [
+    "ruff>=0.6.8",
+]
 
-
-[tool.poetry.dependencies]
-python = "^3.11"
-
-haystack-ai = "*"
-ollama-haystack = "*"
-ragas-haystack = "*"
-
-
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
